--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ body {
   size-adjust: auto;
   margin-right: 10px;
   align-items: center;
+  fill: currentColor;
 }
 .icon-envelope:hover {
   font: var(--accent-color);
@@ -165,9 +166,19 @@ body {
   color: var(--accent-color);
   fill: var(--accent-color);
 }
+.header-web:focus {
+  color: var(--accent-color);
+}
+.header-tel:focus {
+  color: var(--accent-color);
+}
 .icon-envelope:hover {
   fill: var(--accent-color);
 }
+.icon-envelope {
+  fill: currentColor;
+}
+
 .icon-telephone:hover {
   fill: var(--accent-color);
 }
@@ -208,24 +219,18 @@ body {
 
 /*-------------------------------main---------------------------------*/
 .main-container {
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  margin: 0 auto;
+  background-color: #c4c4c4;
   background-image: linear-gradient(
-    to right,
-    rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)
-  );
-  background-image: url(../images/first-pg-hero.jpg);
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1600;
-  height: 600;
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/first-pg-hero.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
   background-position: center;
+  background-size: cover;
+  text-align: center;
+  padding: 200px 0px 200px 0px;
+  width: max-content 1600px;
 }
 .hero-title {
   font-weight: 900;
@@ -285,16 +290,14 @@ body {
 }
 .section-team {
   background-color: #f5f4fa;
-  height: 650px;
-  padding-bottom: 94px;
   padding-top: 94px;
-  margin-bottom: 95px;
+  padding-bottom: 95px;
 }
+
 .middle__icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
 }
 .team-pad {
   padding-top: 30px;
@@ -321,7 +324,6 @@ body {
 }
 .box-description {
   width: 270px;
-  height: 100px;
   display: inline-block;
 }
 .box-description:not(:last-child) {
@@ -426,7 +428,6 @@ body {
   border-radius: 4px;
   justify-content: center;
   align-items: center;
-  margin-bottom: 95px;
 }
 .clients-link-icon {
   fill: currentColor;
@@ -436,8 +437,14 @@ body {
 }
 .client-link:hover,
 .client-link:focus {
-   color: var(--accent-color);
+  color: var(--accent-color);
   border: 1px solid var(--accent-color);
+}
+/*-------------------------------CLIENT SECTION---------------------------------*/
+
+.client-section {
+  padding-bottom: 95px;
+  padding-top: 95px;
 }
 
 /*-------------------------------Footer---------------------------------*/
@@ -541,10 +548,6 @@ body {
   color: #ffffff;
   background-color: #2196f3;
 }
-.footer-social {
-  margin-left: 70px;
-}
-}
 .cocial-list {
   display: flex;
   margin: -10px;
@@ -558,6 +561,9 @@ body {
   text-transform: uppercase;
   color: #ffffff;
 }
+.footer-social {
+  margin-left: 70px;
+}
 .social-list {
   display: flex;
 }
@@ -570,8 +576,6 @@ body {
 .social-item + .social-item {
   margin-left: 10px;
 }
-
-
 
 /*-------------------------------ПОРТФОЛИО мейн---------------------------------*/
 .visually-hidden {
@@ -620,8 +624,8 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-card:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .card-set {
   display: flex;
@@ -636,7 +640,8 @@ body {
 }
 .portfolio-btn {
   color: inherit;
-  font-family: inherit;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
