--- a/css/styles.css
+++ b/css/styles.css
@@ -728,7 +728,7 @@ body {
   color: var(--accent-color);
   cursor: pointer;
 }
-.title-portgolio {
+.title-portfolio {
   font-family: Roboto;
   font-size: 18px;
   line-height: 2;
