--- a/css/styles.css
+++ b/css/styles.css
@@ -733,7 +733,9 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  counter-reset: var(--second-title-color);
+  font-style: normal;
+  font-weight: 700;
+  color: black;
 }
 .discription-portfolio {
   font-family: Roboto;
@@ -741,4 +743,107 @@ body {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--third-title-color);
+}
+/*-------------------------------ПОРТФОЛИО -проджек-------------------------------*/
+
+.project-thumb {
+  position: relative;
+  overflow: hidden;
+}
+.project-text-thumb {
+  position: absolute;
+  padding: 63px 24px;
+  height: 100%;
+  font-family: Roboto;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  top: 0;
+  left: 0;
+  transform: translateY(101%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-card :hover .project-text-thumb {
+  transform: translateY(0);
+}
+
+.portfolio-card .item {
+  flex-direction: column;
+  align-items: normal;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  padding: 20px 24px;
+}
+
+.project-title {
+  font-family: var(--basic-text);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--basic-text-color);
+}
+.project-text {
+  font-family: var(--basic-text);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+
+/*---------Backdrop------------*/
+
+.backdrop {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal {
+  width: 528px;
+  height: 581px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /*transform: scale(1);*/
+  transform: translate(-50%, -50%);
+  /*transition: transform 250ms;*/
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.backdrop .is-hidden .modal {
+  /*transform: scale(0) rotate(90deg);*/
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%);
+}
+.modal-close {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  fill: #2196f3;
+  border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
