--- a/css/styles.css
+++ b/css/styles.css
@@ -449,6 +449,7 @@ body {
 }
 .clients-link-icon {
   fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-item {
   margin-left: 20px;
