--- a/css/styles.css
+++ b/css/styles.css
@@ -809,22 +809,21 @@ body {
 }
 .modal {
   width: 528px;
-  height: 581px;
-  background-color: #ffffff;
+  min-height: 581px;
+  background-color: var(--backgroud-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: absolute;
   top: 50%;
   left: 50%;
-  /*transform: scale(1);*/
+  transform: scale(1) rotate(0);
   transform: translate(-50%, -50%);
-  /*transition: transform 250ms;*/
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop .is-hidden .modal {
-  /*transform: scale(0) rotate(90deg);*/
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translate(-50%, -50%);
+.backdrop.is-hidden .modal {
+  transform: scale(1.5) rotate(180deg) translate(-1000px);
+  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close {
   width: 30px;
