--- a/css/styles.css
+++ b/css/styles.css
@@ -711,8 +711,9 @@ body {
 }
 .portfolio-btn {
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
